--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ main {
 
 }
 :root {
-  --primary: #8c54ff;
+  --primary: #290fbd;
   --secondary: #F3A847;
   --tertiary: #B12704;
   --light: #fafafa;
@@ -102,7 +102,7 @@ header a {
   color: var(--light);
 }
 
-.name {
+.my-name {
   font-size: 3rem;
 }
 
@@ -138,14 +138,20 @@ span[role="img"] {
 form {
   width: 40%;
 }
+form, div {
+  margin: .5rem;
+}
 
 input {
+  background:lightgrey;
+  margin-left: .5rem;
   font-size: 1rem;
   padding: 0.25rem;
-  border: 1px solid var(--dark);
   outline: none;
   border-radius: 3px;
   transition: box-shadow 0.2s;
+  border: 1px solid darkgrey;
+
 }
 
 input:focus {
@@ -166,9 +172,10 @@ nav  li {
 }
 
 textarea {
+  background: lightgrey;
 	width: 600px;
 	height: 120px;
-	border: 3px solid #cccccc;
+	border: 3px solid darkgrey;
 	padding: 5px;
 }
 
@@ -310,3 +317,4 @@ a {
   white-space: pre-line;
   vertical-align: top;
 }
+
