completed resume tab

--- a/src/index.css
+++ b/src/index.css
@@ -333,6 +333,8 @@ footer{
   text-align: center;
 }
 
-.wrapper {
-  text-align: justify;
+.resume-link {
+  color: lightblue;
+  text-decoration: underline;
 }
+
