--- a/src/index.css
+++ b/src/index.css
@@ -250,16 +250,20 @@ textarea {
 }
 
 .card {
-  
   width: 30%;
   text-align: center;
   display: inline-block;
   background-color: rgb(252, 249, 249, .25);
 }
 
-.card-image {
-  cover: true;  
+.card-title {
+  font-size: 1.5rem;
+  border-bottom: 1px solid grey;
 }
+
+/* .card-image {
+  cover: true;  
+} */
 
 .img-thumbnail {
   width: auto;
